AUTOMAKE_OPTIONS=foreign
DISTCLEANFILES=*~
AM_CPPFLAGS=-I$(builddir)

bin_PROGRAMS=\
kybertest_encrypt \
kybertest_decrypt \
kybertest_keygen

kybertest_encrypt_SOURCES=\
src/kybtestlib.cc \
src/encrypt.cc

kybertest_decrypt_SOURCES=\
src/kybtestlib.cc \
src/decrypt.cc

kybertest_keygen_SOURCES=\
src/kybtestlib.cc \
src/keygen.cc

